mcfida/c1/sort_basket
pbeampp.c:561:22: error: use of undeclared identifier 'net'
v12 = ( BASKET *)*( &net.checksum + v10--); 
                     ^
pbeampp.c:568:5: error: use of undeclared identifier 'net'
*( &net.checksum + v11) = ( __int64)v13; 
    ^
2 errors generated.
